Always show a scroll bar to stop the page from jumping around

--- a/renderer/src/theme/theme.scss
+++ b/renderer/src/theme/theme.scss
@@ -6,3 +6,10 @@
 
 @import '~@primer/css/color-modes/index.scss';
 @import '~@primer/css/utilities/index.scss';
+
+body {
+  overflow-x: hidden;
+
+  // When browsing a repo or the like, it is pretty annoying if the page constantly jumps around when the content sometimes leads to a scroll bar and sometimes not.
+  overflow-y: scroll;
+}
